# spm-python

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: compile_spm.yml  create-tag.yml  publish-release.yml  run_unit_tests.yml  test-setup-matlab.yml  wrap_spm.yml
.mpython/: spm_make_python.m
.mpython/templates/: class_header.py  docstring.py  function_header.py  init.py  setup.py
docs/: __wrapper__.html  file_array.html  nifti.html  slover.html  spm.html  spm_ADEM.html  spm_ADEM_M_set.html  spm_ADEM_diff.html  spm_ADEM_set.html  spm_BIDS_file.html  spm_BMS_F.html  spm_Bpdf.html  spm_Ce.html  spm_DEM.html  spm_DEM_F.html  spm_DEM_diff.html  spm_DEM_embed.html  spm_DEM_qP.html  spm_DEM_qU.html  spm_DFP.html  spm_DesMtx.html  spm_DesRep.html  spm_DisplayTimeSeries.html  spm_ECdensity.html  spm_FcUtil.html  spm_Gpdf.html  spm_Icdf.html  spm_KL_dir.html  spm_LAP_F.html  spm_LAP_pg.html  spm_Laplace.html  spm_MB_col.html  spm_MDP_da.html  spm_MH.html  spm_MH_reml_likelihood.html  spm_Menu.html  spm_NESS_ds.html  spm_NESS_gen_lap.html  spm_Ncdf_jdw.html  spm_Npdf.html  (+363 more)
docs/spm/: file_array.html  gifti.html  index.html  meeg.html  nifti.html  slover.html  spm.html  spm_ADEM.html  spm_ADEM_M_set.html  spm_ADEM_diff.html  spm_ADEM_set.html  spm_ADEM_update.html  spm_ALAP.html  spm_A_reduce.html  spm_BIDS.html  spm_BMS.html  spm_BMS_F.html  spm_BMS_F_smpl.html  spm_BMS_bor.html  spm_BMS_gibbs.html  spm_Bcdf.html  spm_Bpdf.html  spm_Ce.html  spm_DEM.html  spm_DEM_F.html  spm_DEM_M_set.html  spm_DEM_R.html  spm_DEM_diff.html  spm_DEM_embed.html  spm_DEM_eval.html  spm_DEM_eval_diff.html  spm_DEM_generate.html  spm_DEM_int.html  spm_DEM_qH.html  spm_DEM_qP.html  spm_DEM_qU.html  spm_DEM_set.html  spm_DEM_z.html  spm_DFP.html  spm_DFP_plot.html  (+781 more)
examples/: DCM_ERP.py  DCM_fMRI_Attention.ipynb  DEM_demo_Maze.ipynb  SensorLevelEvokedResponse.ipynb  SourceLevelEvokedResponse.ipynb  auditory_batch.py  matlab_types.ipynb  matlab_types.md  mne2spm2mne.ipynb  mne2spm2mne.py
scripts/: setup_matlab.py
spm/: __init__.py  __wrap__.py  __wrapper__.py  _runtime.py  _version.py  file_array.py  gifti.py  meeg.py  nifti.py  slover.py  spm.py  spm_ADEM.py  spm_ADEM_M_set.py  spm_ADEM_diff.py  spm_ADEM_set.py  spm_ADEM_update.py  spm_ALAP.py  spm_A_reduce.py  spm_BIDS.py  spm_BIDS_file.py  spm_BMS.py  spm_BMS_F.py  spm_BMS_F_smpl.py  spm_BMS_bor.py  spm_BMS_gibbs.py  spm_Bcdf.py  spm_Bpdf.py  spm_Ce.py  spm_DEM.py  spm_DEM_F.py  spm_DEM_M_set.py  spm_DEM_R.py  spm_DEM_diff.py  spm_DEM_embed.py  spm_DEM_eval.py  spm_DEM_eval_diff.py  spm_DEM_generate.py  spm_DEM_int.py  spm_DEM_qH.py  spm_DEM_qP.py  (+792 more)
spm/__compat/: __init__.py  loadxml.py  savexml.py  spm_add.py  spm_adjmean_fmri_ui.py  spm_adjmean_ui.py  spm_atranspa.py  spm_chi2_plot.py  spm_digamma.py  spm_dirichlet.py  spm_eeval.py  spm_fMRI_design_show.py  spm_imcalc_ui.py  spm_load_float.py  spm_matlab_version_chk.py  spm_mean.py  spm_mean_ui.py  spm_read_hdr.py  spm_resss.py  spm_spm_ui.py  spm_tbx_config2cfg.py
spm/__config/: __init__.py  cfg_mlbatch_appcfg.py  spm_cfg.py  spm_cfg_bbox.py  spm_cfg_bms_map.py  spm_cfg_cat.py  spm_cfg_cdir.py  spm_cfg_checkreg.py  spm_cfg_con.py  spm_cfg_coreg.py  spm_cfg_dcm_bms.py  spm_cfg_dcm_est.py  spm_cfg_dcm_fmri.py  spm_cfg_dcm_meeg.py  spm_cfg_dcm_peb.py  spm_cfg_deface.py  spm_cfg_deformations.py  spm_cfg_dicom.py  spm_cfg_disp.py  spm_cfg_ecat.py  spm_cfg_eeg.py  spm_cfg_eeg_artefact.py  spm_cfg_eeg_average.py  spm_cfg_eeg_avgfreq.py  spm_cfg_eeg_avgtime.py  spm_cfg_eeg_bc.py  spm_cfg_eeg_cfc.py  spm_cfg_eeg_channel_selector.py  spm_cfg_eeg_collapse_timefreq.py  spm_cfg_eeg_combineplanar.py  spm_cfg_eeg_contrast.py  spm_cfg_eeg_convert.py  spm_cfg_eeg_convert2images.py  spm_cfg_eeg_copy.py  spm_cfg_eeg_correct_sensor_data.py  spm_cfg_eeg_crop.py  spm_cfg_eeg_delete.py  spm_cfg_eeg_dipfit.py  spm_cfg_eeg_downsample.py  spm_cfg_eeg_epochs.py  (+92 more)
spm/__external/: __init__.py
spm/__man/: __init__.py
spm/__matlabbatch/: __init__.py  _cfg_disp_error.py  _cfg_eval_valedit.py  _cfg_justify.py  _cfg_maxextent.py  _cfg_mlbatch_appcfg_1.py  _cfg_mlbatch_appcfg_2.py  _cfg_mlbatch_appcfg_master.py  _cfg_mlbatch_defaults.py  _cfg_mlbatch_root.py  _cfg_onscreen.py  _cfg_run_cm.py  _cfg_textfill.py  _cfg_ui_disable.py  _cfg_ui_getListboxTop.py  _cfg_ui_restore.py  _cfg_util_persistent.py  _int2str.py  _num2str.py  cfg_branch.py  cfg_callbuiltin.py  cfg_choice.py  cfg_const.py  cfg_dbstop.py  cfg_dep.py  cfg_entry.py  cfg_exbranch.py  cfg_files.py  cfg_findspec.py  cfg_get_defaults.py  cfg_getfile.py  cfg_intree.py  cfg_inv_out.py  cfg_item.py  cfg_leaf.py  cfg_load_jobs.py  cfg_mchoice.py  cfg_menu.py  cfg_message.py  cfg_mlbatch_appcfg.py  (+18 more)
spm/__spm_orthviews/: __init__.py  spm_ov_browser.py  spm_ov_contour.py  spm_ov_display.py  spm_ov_goto_max.py  spm_ov_mesh.py  spm_ov_movie.py  spm_ov_reorient.py  spm_ov_rgb.py  spm_ov_roi.py  spm_ov_save.py  spm_ovhelper_3Dreg.py
spm/__tests/: ROBOT_DCM_EEG.py  ROBOT_DCM_fMRI.py  ROBOT_DEM.py  __init__.py  end2end_attention.py  end2end_restingfMRI.py  spm_eeg_test_coverage.py  test_checkcode.py  test_gifti.py  test_regress_fmri_glm_dcm.py  test_regress_fmri_group.py  test_regress_spm_dcm_fmri.py  test_regress_spm_distort_mesh.py  test_regress_spm_opm.py  test_spm.py  test_spm_BMS_gibbs.py  test_spm_Ce.py  test_spm_Ncdf.py  test_spm_bireduce.py  test_spm_cat_struct.py  test_spm_cfg_dcm_est.py  test_spm_cfg_dcm_fmri.py  test_spm_cfg_dcm_peb.py  test_spm_create_vol.py  test_spm_dcm_bma.py  test_spm_dcm_bmr.py  test_spm_dcm_bmr_all.py  test_spm_dcm_bpa.py  test_spm_dcm_fit.py  test_spm_dcm_fmri_check.py  test_spm_dcm_fmri_csd.py  (+68 more)
tests/: test_array.py  test_batch_creation.py  test_cell.py  test_implicit.py  test_matlab_class.py  test_matlab_class_wrapper.py  test_runtime.py  test_struct.py  test_structarray.py  tests_runtime.py
utils/: README.md  mne2spm2mne.py  spm_mne_converter.py
(+2899 files in other folders)
