[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spm-python"
dynamic = ["version"]
description = "Python bindings for the SPM software."
readme = "README.md"
license = {file = "LICENSE"}
maintainers = [
  {name = "Johan Medrano", email = "johan.medrano@ucl.ac.uk"},
  {name = "Yael Balbastre", email = "y.balbastre@ucl.ac.uk"}
]
authors = [
  {name = "Johan Medrano"},
  {name = "Yael Balbastre"},
  {name = "Yulia Bezsudnova"},
  {name = "Arthur Mitchell"},
  {name = "Peter Zeidman"},
  {name = "Olivia Kowalczyk"},
]
requires-python = ">=3.6,<3.13"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mpython-core>=25.4rc1",
    "spm-runtime-r2025a == 25.1.2 ; python_version >= '3.9'",
    "spm-runtime-r2023a == 25.1.2 ; python_version == '3.8'",
    "spm-runtime-r2021b == 25.1.2 ; python_version == '3.7'",
    "spm-runtime-r2020b == 25.1.2 ; python_version == '3.6'",
]

[project.optional-dependencies]
latest = ["spm-runtime        == 25.1.2"]
R2025a = ["spm-runtime-R2025a == 25.1.2"]
R2024b = ["spm-runtime-R2024b == 25.1.2"]
R2024a = ["spm-runtime-R2024a == 25.1.2"]
R2023b = ["spm-runtime-R2023b == 25.1.2"]
R2023a = ["spm-runtime-R2023a == 25.1.2"]
R2022b = ["spm-runtime-R2022b == 25.1.2"]
R2022a = ["spm-runtime-R2022a == 25.1.2"]
R2021b = ["spm-runtime-R2021b == 25.1.2"]
R2021a = ["spm-runtime-R2021a == 25.1.2"]
R2020b = ["spm-runtime-R2020b == 25.1.2"]

[project.urls]
Repository = "https://github.com/spm/spm-python"

[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic]
version = {attr = "spm._version.__version__"}

[tool.ruff]
include = ["pyproject.toml", "spm/**/*.py", "tests/**/*.py", "scripts/**/*.py"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F811"]
